--- a/src/base/_mixins.scss
+++ b/src/base/_mixins.scss
@@ -1,12 +1,25 @@
 // HELPERS
 
-$helper-space: 1em;
+$helper-space: 1rem;
 
 // MIXINS
 
 @mixin grid-center {
   display: grid;
   place-items: center;
+}
+
+@mixin flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@mixin flex-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 @mixin full-screen {
